--- a/ElmaSecondTry/Web.config
+++ b/ElmaSecondTry/Web.config
@@ -17,7 +17,13 @@
     <authentication mode="Forms">
       <forms name="cookies" timeout="60" loginUrl="~/Account/Authorization" />
     </authentication>
-    
+
+    <roleManager enabled="true" defaultProvider="DefaultRoleProvider">
+      <providers>
+        <add name="DefaultRoleProvider" type="ElmaSecondTry.Providers.CustomRoleProvider" />
+      </providers>
+    </roleManager>
+
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
