--- a/ElmaSecondTryNHibernate/ElmaSecondTryNHibernate.csproj
+++ b/ElmaSecondTryNHibernate/ElmaSecondTryNHibernate.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="9.0.0" />
     <PackageReference Include="NHibernate" Version="5.2.7" />
+    <PackageReference Include="Ninject" Version="3.2.0" />
   </ItemGroup>
 
   <ItemGroup>
